[package]
name = "dedup-log"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
anyhow = "=1"
config = "=0.11"
hashbrown = "=0.11"
num_cpus = "=1"
serde = { version = "=1", features = ["derive"] }
tokio = { version = "=1", features = ["full"] }
tokio-stream = "0.1.8"
tokio-util = { version = "=0.6", features = ["full"] }
tracing = "=0.1"
tracing-subscriber = "=0.2"

[dev-dependencies]
rand = "=0.8"
