[package]
name = "dedup-log"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
anyhow = "=1"
config = "=0.13"
hashbrown = "=0.12"
num_cpus = "=1"
serde = { version = "=1", features = ["derive"] }
tokio = { version = "=1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "=0.7", features = ["full"] }
tracing = "=0.1"
tracing-subscriber = "=0.3"

[dev-dependencies]
rand = "=0.8"
