[package]
name = "dedup-log"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
anyhow = "1"
config = { version = "0", default-features = false, features = ["toml"] }
hashbrown = "0"
num_cpus = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0"
tokio-util = { version = "0", features = ["full"] }
tracing = "0"
tracing-subscriber = "0"

[dev-dependencies]
rand = "0"
